# d

./: .eslintrc.json  .gitignore  AGENTS.md  BINARY_INSTALL.md  BUILD_INSTRUCTIONS.md  DISTRIBUTION.md  GITHUB_RELEASE_STEPS.md  Makefile  QUICK_REFERENCE.md  README.md  README_BINARY_DISTRIBUTION.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.2.0.md  RELEASE_v0.1.1.md  TAURI_MIGRATION_PLAN.md  TAURI_REWRITE_PLAN.md  TESTING.md  TEST_SUMMARY.md  VERSION_BUMP_CHECKLIST.md  build-macos.sh  build_and_package.sh  build_binary.sh  d.spec  index.html  install.sh  package.json  package.sh  pyproject.toml  tailwind.config.js  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
app/: .tool-versions  package-lock.json  package.json
app/src/: App.vue  style.css
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/adapters/: certificate.rs  dns.rs  http.rs  whois.rs
app/src-tauri/src/commands/: certificate.rs  dns.rs  dnssec.rs  http.rs  whois.rs
app/src-tauri/src/models/: certificate.rs  dns.rs  http.rs  mod.rs
app/src/components/: Certificate.vue  DNS.vue  DNSSEC.vue  Dashboard.vue  Email.vue  HTTP.vue  LoadingProgress.vue  Logs.vue  LogsButton.vue  LogsSlideout.vue  Navigation.vue  PanelLoading.vue  Registration.vue
app/src/composables/: useKeyboardShortcuts.ts
app/src/router/: index.ts
app/src/stores/: certificate.ts  dns.ts  email.ts  http.ts
legacy/: Makefile  README.md
legacy/src/dns_debugger/: __main__.py  state.py
legacy/src/dns_debugger/adapters/cert/: openssl_adapter.py
legacy/src/dns_debugger/adapters/email/: __init__.py  dns_email_adapter.py  factory.py
legacy/src/dns_debugger/adapters/http/: curl_adapter.py
legacy/src/dns_debugger/adapters/registry/: rdap_adapter.py
legacy/src/dns_debugger/domain/models/: certificate.py  email_info.py  http_info.py
legacy/src/dns_debugger/domain/ports/: cert_port.py  dns_port.py  email_port.py  export_port.py  registry_port.py
legacy/src/dns_debugger/facades/: __init__.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: certificate.rs  certificate_test.rs  dns.rs  dns_test.rs  email.rs  http.rs  mod.rs  whois.rs  whois_test.rs
src-tauri/src/commands/: certificate.rs  email.rs  mod.rs
src-tauri/src/models/: command_log.rs  http.rs  mod.rs  whois.rs
src-tauri/tests/: integration_test.rs
src/components/: Certificate.vue  DNS.spec.ts  DNS.vue  DNSSEC.vue  Dashboard.vue  Email.vue  HTTP.vue  HTTPResponse.vue  LoadingProgress.vue  Logs.vue  LogsSlideout.vue  Navigation.vue  PanelLoading.vue  RawDataModal.vue  RedirectChain.vue  RefreshButton.vue  Registration.vue
src/dns_debugger/: __main__.py  app.py  state.py
src/dns_debugger/adapters/cert/: factory.py  openssl_adapter.py
src/dns_debugger/adapters/dns/: dig_adapter.py  dog_adapter.py  factory.py
src/dns_debugger/adapters/email/: dns_email_adapter.py
src/dns_debugger/adapters/http/: curl_adapter.py  factory.py  wget_adapter.py
src/dns_debugger/adapters/registry/: factory.py  whois_adapter.py  whois_bash_adapter.py
src/dns_debugger/domain/models/: certificate.py  dns_record.py  dnssec_info.py  domain_info.py  email_info.py  http_info.py
src/dns_debugger/domain/ports/: cert_port.py  http_port.py
src/dns_debugger/facades/: dashboard_facade.py
src/dns_debugger/screens/: raw_data_screen.py
src/models/: certificate.ts  dns.ts  http.ts  whois.ts
src/stores/: app.ts  certificate.spec.ts  dns.spec.ts  dns.ts  dnssec.ts  email.ts  http.ts  logs.ts  whois.spec.ts  whois.ts
src/test/: helpers.ts  setup.ts
